--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-    id="cordova-plugin-minew-trackerkit"
+    id="minew-trackerkit"
     version="1.0.0">
     <name>Minew Tracker Kit</name>
     <description></description>
