--- a/plugin.xml
+++ b/plugin.xml
@@ -32,7 +32,7 @@
 
       <source-file src="src/android/MinewTrackerkit.java" target-dir="src/com/minew/" />
 
-      <framework src="src/android/libs/MTTrackerKit.aar" custom="true" embed="true"/>
+      <!-- <framework src="src/android/libs/MTTrackerKit.aar" custom="true" embed="true"/> -->
     </platform>
 
     <!-- ios -->
