--- a/plugin.xml
+++ b/plugin.xml
@@ -32,6 +32,11 @@
 
       <source-file src="src/android/MinewTrackerkit.java" target-dir="src/com/minew/" />
 
+      <!-- <framework src="src/android/yourFile.gradle" custom="true" type="gradleReference" />
+      <resource-file src="yourDirContainingYourAAR/foo.aar" target="libs/foo.aar" /> -->
+      <framework src="src/android/MinewTrackerkit.gradle" custom="true" type="gradleReference" />
+      <resource-file src="src/android/libs/MTTrackerKit.aar" target="libs/MTTrackerKit.aar" />
+
       <!-- <framework src="src/android/libs/MTTrackerKit.aar" custom="true" embed="true"/> -->
     </platform>
 
