--- a/plugin.xml
+++ b/plugin.xml
@@ -24,6 +24,7 @@
         </feature>
       </config-file>
       <config-file target="AndroidManifest.xml" parent="/manifest">
+          <uses-sdk android:minSdkVersion="18" />
           <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
           <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
           <uses-permission android:name="android.permission.BLUETOOTH"/>
@@ -31,13 +32,10 @@
       </config-file>
 
       <source-file src="src/android/MinewTrackerkit.java" target-dir="src/com/minew/" />
-
-      <!-- <framework src="src/android/yourFile.gradle" custom="true" type="gradleReference" />
-      <resource-file src="yourDirContainingYourAAR/foo.aar" target="libs/foo.aar" /> -->
-      <framework src="src/android/MinewTrackerkit.gradle" custom="true" type="gradleReference" />
       <resource-file src="src/android/libs/MTTrackerKit.aar" target="libs/MTTrackerKit.aar" />
 
-      <!-- <framework src="src/android/libs/MTTrackerKit.aar" custom="true" embed="true"/> -->
+      <framework src="src/android/MinewTrackerkit.gradle" custom="true" type="gradleReference" />
+      <framework src="src/android/libs/MTTrackerKit.aar" custom="true" embed="true"/>
     </platform>
 
     <!-- ios -->
