back to original

--- a/plugin.xml
+++ b/plugin.xml
@@ -35,7 +35,9 @@
       </config-file>
 
       <source-file src="src/android/MinewTrackerkit.java" target-dir="src/com/minew/" />
-      <lib-file src="src/android/libs/MTTrackerKit.jar" />
+
+      <framework src="src/android/MinewTrackerkit.gradle" custom="true" type="gradleReference" />
+      <resource-file src="libs/MTTrackerKit.aar" target="libs/MTTrackerKit.aar" />
     </platform>
 
     <!-- ios -->
