--- a/src/android/MinewTrackerkit.gradle
+++ b/src/android/MinewTrackerkit.gradle
@@ -7,6 +7,7 @@ repositories{
 
 dependencies {
    compile(name:'MTTrackerKit', ext:'aar')
+   compile 'com.android.support:support-v4:21.+'
 }
 
 android {
