--- a/src/android/MinewTrackerkit.gradle
+++ b/src/android/MinewTrackerkit.gradle
@@ -1,3 +1,7 @@
+apply plugin: "kotlin-kapt"
+apply plugin: "kotlin-android"
+apply plugin: 'kotlin-android-extensions'
+
 repositories{
   jcenter()
   flatDir {
@@ -6,8 +10,17 @@ repositories{
 }
 
 dependencies {
-   compile(name:'MTTrackerKit', ext:'aar')
-   compile 'com.android.support:support-v4:21.+'
+  def kotlin_version = "1.3.41"
+  def room_version = "2.2.1"
+
+  compile(name:'MTTrackerKit', ext:'aar')
+  compile 'com.android.support:support-v4:21.+'
+
+  implementation fileTree(dir: 'libs', include: ['*.jar'])
+  implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+  implementation "androidx.room:room-runtime:$room_version"
+  implementation "com.google.code.gson:gson:2.8.6"
+  kapt "androidx.room:room-compiler:$room_version"
 }
 
 android {
